# pop-health-intelligence-engine

./: .dockerignore  .env  .env.example  .gitignore  .hud_p1  .hud_p2  Dockerfile  README.md  SPEC.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: download_sdoh_data.py  ingest_food_access.py
src/: main.py
src/features/intervention_strategist/: __init__.py  base.py  intervention_strategist.core.py  intervention_strategist.shell.py  test_intervention_strategist.py
src/features/intervention_strategist/providers/: llama.py  mock.py  ollama.py
src/features/risk_scoring/: __init__.py  risk_scoring.core.py  risk_scoring.shell.py  test_risk_scoring.py
src/features/sdoh_profiler/: __init__.py  base.py  historical.py  sdoh_profiler.core.py  sdoh_profiler.shell.py  test_chas.py  test_food_crime.py  test_sdoh_profiler.py  test_sdoh_providers.py
src/features/sdoh_profiler/providers/: airnow.py  census.py  chas.py  composite.py  food_access_variables.py  food_crime.py  hud.py  local_db.py  mock.py  tn_crime_data.py
src/features/value_quantifier/: __init__.py  test_value_quantifier.py  value_quantifier.core.py  value_quantifier.shell.py
src/shared/: models.py
