[project]
name = "pop-health-intelligence-engine"
version = "0.1.0"
description = "Strategic middleware fusing clinical EHR + SDOH data to generate ROI-quantified intervention plans"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]